Add grid and format img

--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <title>Interface 1</title>
   </head>
   <body>
-    <!-- Your code here -->
+
+    <div class="box">
+        <div class="section">
+            <img src="images/grunt.png" alt="Grunt">
+            <h5>Grunt plugin</h5>
+            <p>Install the grunt-surge plugin, and your project is ready to use grunt deploy.</p>
+        </div>
+
+        <div class="section">
+            <img src="images/gulp.svg" alt="Gulp">
+            <h5>Gulp plugin</h5>
+            <p>Install surge as as devDependency, and you're ready to use it in your Gulpfile.</p>
+        </div>
+
+        <div class="section">
+            <img src="images/githooks.jpg" alt="Git Hooks">
+            <h5>Git Hooks</h5>
+            <p>Deploy every time you push to Github, but without any branch juggling.</p>
+        </div>
+
+        <div class="section">
+            <img src="images/npm.png" alt="npm" >
+            <h5>npm run scripts</h5>
+            <p>Install the Surgee CLI tool, and your project is ready to use in your package.json.</p>
+        </div>
+
+    </div>
+    
   </body>
 </html>
