--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <title>Interface 1</title>
   </head>
@@ -11,25 +12,25 @@
     <div class="box">
         <div class="section">
             <img src="images/grunt.png" alt="Grunt">
-            <h5>Grunt plugin</h5>
+            <h2>Grunt plugin</h2>
             <p>Install the grunt-surge plugin, and your project is ready to use grunt deploy.</p>
         </div>
 
         <div class="section">
             <img src="images/gulp.svg" alt="Gulp">
-            <h5>Gulp plugin</h5>
+            <h2>Gulp plugin</h2>
             <p>Install surge as as devDependency, and you're ready to use it in your Gulpfile.</p>
         </div>
 
         <div class="section">
             <img src="images/githooks.jpg" alt="Git Hooks">
-            <h5>Git Hooks</h5>
+            <h2>Git Hooks</h2>
             <p>Deploy every time you push to Github, but without any branch juggling.</p>
         </div>
 
         <div class="section">
             <img src="images/npm.png" alt="npm" >
-            <h5>npm run scripts</h5>
+            <h2>npm run scripts</h2>
             <p>Install the Surgee CLI tool, and your project is ready to use in your package.json.</p>
         </div>
 
