Add some extra styling

--- a/index2.html
+++ b/index2.html
@@ -10,13 +10,13 @@
   <body>
 
     <div class="container">
-        <div class="card text-white bg-primary" style="width: 24rem;">
+        <div class="card" style="width: 24rem;">
           <div class="card-body">
-            <h4 class="card-title">Users right now</h4>
-            <p class="card-text">90</p>
+            <p>Users right now</p>
+            <p class="number">90</p>
             <p>Page views per minute</p>
             <hr>
-            <img>
+            <img src="images/chart.JPG" alt="Chart">
             <table class="table">
                 <thead>
                   <tr>
@@ -48,7 +48,7 @@
                 </tbody>
               </table>
 
-              <a name="" id="" class="btn btn-primary" href="#" role="button">REAL-TIME REPORT</a>
+              <a class="btn" href="#" role="button">REAL-TIME REPORT ></a>
           </div>
         </div>
 
