Put button to the right side

--- a/index2.html
+++ b/index2.html
@@ -47,8 +47,9 @@
                   </tr>
                 </tbody>
               </table>
-
-              <a class="btn" href="#" role="button">REAL-TIME REPORT ></a>
+              <div class="text-right">
+                <a class="btn" href="#" role="button">REAL-TIME REPORT ></a>
+              </div>
           </div>
         </div>
 
