Change font integration 1

--- a/index1.html
+++ b/index1.html
@@ -13,25 +13,25 @@
         <div class="section">
             <img src="images/grunt.png" alt="Grunt">
             <h3>Grunt plugin</h3>
-            <p>Install the grunt-surge plugin, and your project is ready to use grunt deploy.</p>
+            <p>Install the <strong>grunt-surge plugin</strong>, and your project is ready to use <strong>grunt deploy</strong>.</p>
         </div>
 
         <div class="section">
             <img src="images/gulp.svg" alt="Gulp">
             <h3>Gulp plugin</h3>
-            <p>Install surge as as devDependency, and you're ready to use it in your Gulpfile.</p>
+            <p>Install <strong>surge</strong> as as devDependency, and you're ready to use it in your Gulpfile.</p>
         </div>
 
         <div class="section">
             <img src="images/githooks.jpg" alt="Git Hooks">
             <h3>Git Hooks</h3>
-            <p>Deploy every time you push to Github, but without any branch juggling.</p>
+            <p>Deploy every time you <strong>push</strong> to Github, but without any branch juggling.</p>
         </div>
 
         <div class="section">
             <img src="images/npm.png" alt="npm" >
             <h3>npm run scripts</h3>
-            <p>Install the Surgee CLI tool, and your project is ready to use in your package.json.</p>
+            <p>Install the Surge CLI tool, and your project is ready to use in your <strong>package.json</strong>.</p>
         </div>
 
     </div>
