Add base files interface 3

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h2>CSS-INTEGRATION</h2>
         <a href="index1.html" class="btn btn-outline-info btn-lg" role="button" style="margin: 25px;">Interface 1</a>
         <a href="index2.html" class="btn btn-outline-info btn-lg" role="button" style="margin: 25px;">Interface 2</a>
+        <a href="index3.html" class="btn btn-outline-info btn-lg" role="button" style="margin: 25px;">Interface 3</a>
       </div>
   </body>
 </html>
