Add image on leftside

--- a/index3.html
+++ b/index3.html
@@ -9,5 +9,11 @@
   </head>
   <body>
     <div id="mockup"></div>
+    
+    <div class="leftside">
+        <img src="images/15.card-small.png" alt="desk">
+    </div>
+
+    
   </body>
 </html>
