Add font family

--- a/index3.html
+++ b/index3.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="css/style3.css" type="text/css" rel="stylesheet" />
 
     <title>Interface 3</title>
@@ -17,7 +19,7 @@
     
         <div class="rightside">
             <h3>A Quick Market-Driven Guide to Choosing a 'Profitable' Start-Up Name</h3>
-            <p>And what 'profit' has to do with naming your start-up</p>
+            <p>And what 'profit' has to do with naming your startup</p>
         </div>
     </div>
     
