Change margin and font size of title and text

--- a/index3.html
+++ b/index3.html
@@ -18,8 +18,8 @@
         </div>
     
         <div class="rightside">
-            <h3>A Quick Market-Driven Guide to Choosing a 'Profitable' Start-Up Name</h3>
-            <p>And what 'profit' has to do with naming your startup</p>
+            <h3 class="title">A Quick Market-Driven Guide to Choosing a 'Profitable' Start-Up Name</h3>
+            <p class="text">And what 'profit' has to do with naming your startup</p>
         </div>
     </div>
     
