Add bottom info

--- a/index3.html
+++ b/index3.html
@@ -24,9 +24,16 @@
             </div>
 
             <div class="info">
-                
+                <div class="picture">
+                    <img src="images/author.png" alt="author">
+                </div>
+                <div class="author">
+                    <h6>Josiah Humphrey</h6>
+                    <p>Jun 23 · 9 min read</p>
+                </div>
             </div>
         </div>
+
     </div>
     
   </body>
