Add bookmark icon

--- a/index3.html
+++ b/index3.html
@@ -27,9 +27,15 @@
                 <div class="picture">
                     <img src="images/author.png" alt="author">
                 </div>
+
                 <div class="author">
                     <h6>Josiah Humphrey</h6>
                     <p>Jun 23 · 9 min read</p>
+                </div>
+
+                <div class="bookmark">
+                    <img src="images/bookmark.svg" alt="bookmark" id="bookmark">
+                    <img src="images/down-arrow.svg" alt="arrow" id="arrow">
                 </div>
             </div>
         </div>
